added external page for Wave piece

--- a/public/wave.html
+++ b/public/wave.html
@@ -40,7 +40,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact">CONTACT</a>
+                        <a href="/contact.hbs">CONTACT</a>
                     </li>
                 </ul>
                    <ul class="navlinks2">
@@ -54,7 +54,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact">CONTACT</a>
+                        <a href="/contact.hbs">CONTACT</a>
                     </li>
                 </ul>
                 <div class="burger-menu d-sm-block d-lg-none d-xl-none">
@@ -69,16 +69,42 @@
 
 <div class="jumbotron-fluid">
     <h1 class="d-none">Splash</h1>
-    <div class="row splash">
+    <div class="row wave-splash">
         <div class="col-sm-12 col-lg-12 col-md-12">
-            
-            
+            <img src="images/p-img/wave-header.png" alt="Wave Header" class="wave-Header">
+            <img src="images/p-img/Wave-Splash.png" alt="Wave Header" class="wave-Splash">
+        </div>
     </div>
 </div>
+
+<div class="container-fluid">
+    <h1 class="d-none">About the Challenge</h1>
+    <div class="row wave-About">
+        <div class="col-sm-12 col-lg-12">
+            <h1 class="wave-Title">About the Challenge</h1>
+            <p>This challenge is to design and analyze a travel browsing and booking experience. Week one will focus on the website and week two will go mobile.</p>
+            <p>As travelling experiences are not always fun and zest, my main goal as the UX/UI Designer is to create and design a travel website for users, specifically for foreigners and nomads, who are often overwhelmed with not having an idea where to start. Although travelling is fun, researching an unfamiliar place can be tedious. That said, WAVECHASER.PH is a homage to my birth-country, Philippines. As someone who loves travelling, I do share most of the pain points of the sample user persona, including the anxiety that most travellers feel when researching an unfamiliar country.</p>
+            <p>Taking inspirations from Narcity and Kayak, WAVECHASER.PH offers an all-in-one place where travellers can research the beaches, waterfalls, and hidden gems in the Philippines. If when the travellers liked or pinned one of the desired destinations, the website will then offer a chance for them to build a travel planner where they can curate all of their dream destinations. Flight booking and tips on where to book for best and cheap accommodations are also made available.
+            </p>
+            <h4>WAVECHASER.PH’s services include:</h4>
+            <ul class="list">
+                <li>1. Information about Philippines’ beaches, waterfalls, and hidden gems</li>
+                <li>2. Tips on the best and cheap flights and accommodations</li>
+                <li>3. Easy to build Travel Planner and Pinlist</li>
+                <li>4. Available to read blogs about Philippines</li>
+                <li>5. Ability to add fellow travellers</li>
+            </ul>
+        </div>
+    </div>
 </div>
-<main>
-    {{{body}}}
-</main>
+<div class="container-fluid">
+    <div class="row wave-bottom-splash">
+        <div class="col-sm-12 col-lg-12">
+            <img src="images/p-img/wave-Mock.png" alt="WaveChaser Mockup" class="wave-mock">
+        </div>
+    </div>
+</div>
+
 
 <footer class="container-fluid">
     <div class="row">
@@ -96,7 +122,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact">CONTACT</a>
+                        <a href="/contact.hbs">CONTACT</a>
                     </li>
                 </ul>
             </div>
