stylized error page

--- a/public/wave.html
+++ b/public/wave.html
@@ -106,7 +106,7 @@
 </div>
 
 
-<footer class="container-fluid">
+<footer class="container-fluid wave-footer">
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="f-nav">
