--- a/public/wave.html
+++ b/public/wave.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:700|Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>Syrrel Cabiling</title>
+    <title>WaveChaser.ph - Syrrel Cabiling</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact.hbs">CONTACT</a>
+                        <a href="/contact">CONTACT</a>
                     </li>
                 </ul>
                    <ul class="navlinks2">
@@ -54,7 +54,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact.hbs">CONTACT</a>
+                        <a href="/contact">CONTACT</a>
                     </li>
                 </ul>
                 <div class="burger-menu d-sm-block d-lg-none d-xl-none">
@@ -122,7 +122,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact.hbs">CONTACT</a>
+                        <a href="/contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
