--- a/public/thermo.html
+++ b/public/thermo.html
@@ -70,7 +70,61 @@
 <div class="container-fluid">
     <div class="row thermo-splash">
         <div class="col-sm-12 col-md-12 col-lg-12">
+        </div>
+    </div>
+</div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-lg-12">
+                <div class="model-cont">
+                    <img src="images/p-img/ThermoSecure-UI.png" alt="Thermo Model" class="model">
+                </div>
+                <div class="splash-txt">
+                    <p>
+                        The basis of this assignment is to create an interactive application using 3D, video, and still images. My team and I designed and developed an engaging experience for the end user with which they can interact in a one-page mobile-first web application.
+                    </p>
+                </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row ui">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+                <img src="images/p-img/Thermo-suppImg2.jpg" alt="UI Design" class="ui-img">
+            <div class="ui-txt">
+                <p>As the Graphic Designer of the team, I was responsible for designing the user experience and interface of the app where users can modify the thermostat, whether they are at home or away.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<hr class="vr">
+
+<div class="container">
+    <div class="row sketch">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="sketch-cont col-lg-6">
+                        <img src="images/p-img/Rough_Logos.jpg" alt="Rough Sketch of Logos" class="sketch-img">
+                    </div>
+                    <div class="logo-txt">
+                        <p>To formalize our brand, we needed a logo. Some of the keywords we all agreed to are safe, secure, temperature, comfort, and home. This is the the final logo I presented to them. My idea was to incorporate a house, lock, and sun all in one logo. These elements captured everything that the ThermoSecure by HomeCom system has to offer; those being security, temperature control, weather and air monitoring, all for your home.  </p>
+                        <img src="images/p-img/Thermo-Logo.svg" alt="Final Logo design" class="final-logo">
+                    </div>
+        </div>
+    </div>
+</div>
+
+<hr class="vr">
+
+<div class="container">
+    <div class="row sheet">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="sheet-cont">
+                <p>Finally, I designed a corresponding sell-sheet to entice the public with this new product.</p>
+                <img src="images/p-img/Thermo-sheet.jpg" alt="Thermo Sell Sheet" class="sell-sheet">
+            </div>
         </div>
     </div>
 </div>
