edited footer again, added a revised db, edited biotec.html

--- a/public/thermo.html
+++ b/public/thermo.html
@@ -80,7 +80,7 @@
                 <div class="model-cont">
                     <img src="images/p-img/ThermoSecure-UI.png" alt="Thermo Model" class="model">
                 </div>
-                <div class="splash-txt">
+                <div class="thermo-splash-txt">
                     <p>
                         The basis of this assignment is to create an interactive application using 3D, video, and still images. My team and I designed and developed an engaging experience for the end user with which they can interact in a one-page mobile-first web application.
                     </p>
