--- a/public/biotec.html
+++ b/public/biotec.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:700|Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>ThermoSecure by HouseCom - Syrrel Cabiling</title>
+    <title>Biotec - Syrrel Cabiling</title>
 </head>
 
 <body>
