edited wave html

--- a/public/wave.html
+++ b/public/wave.html
@@ -84,16 +84,28 @@
             <h1 class="wave-Title">About the Challenge</h1>
             <p>This challenge is to design and analyze a travel browsing and booking experience. Week one will focus on the website and week two will go mobile.</p>
             <p>As travelling experiences are not always fun and zest, my main goal as the UX/UI Designer is to create and design a travel website for users, specifically for foreigners and nomads, who are often overwhelmed with not having an idea where to start. Although travelling is fun, researching an unfamiliar place can be tedious. That said, WAVECHASER.PH is a homage to my birth-country, Philippines. As someone who loves travelling, I do share most of the pain points of the sample user persona, including the anxiety that most travellers feel when researching an unfamiliar country.</p>
-            <p>Taking inspirations from Narcity and Kayak, WAVECHASER.PH offers an all-in-one place where travellers can research the beaches, waterfalls, and hidden gems in the Philippines. If when the travellers liked or pinned one of the desired destinations, the website will then offer a chance for them to build a travel planner where they can curate all of their dream destinations. Flight booking and tips on where to book for best and cheap accommodations are also made available.
+            <img src="images/p-img/wave-user.png" alt="User Persona" class="user-persona">
+            <p class="par-2">Taking inspirations from Narcity and Kayak, WAVECHASER.PH offers an all-in-one place where travellers can research the beaches, waterfalls, and hidden gems in the Philippines. If when the travellers liked or pinned one of the desired destinations, the website will then offer a chance for them to build a travel planner where they can curate all of their dream destinations. Flight booking and tips on where to book for best and cheap accommodations are also made available.
             </p>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="mobile-ui">
+            <img src="images/p-img/wave-mobile.gif" alt="Mobile UX" class="text-center">
+            </div>
+            <div class="mobile-txt">
             <h4>WAVECHASER.PH’s services include:</h4>
-            <ul class="list">
+            <ul>
                 <li>1. Information about Philippines’ beaches, waterfalls, and hidden gems</li>
                 <li>2. Tips on the best and cheap flights and accommodations</li>
                 <li>3. Easy to build Travel Planner and Pinlist</li>
                 <li>4. Available to read blogs about Philippines</li>
                 <li>5. Ability to add fellow travellers</li>
             </ul>
+            </div>
         </div>
     </div>
 </div>
