added gif on wave html

--- a/public/wave.html
+++ b/public/wave.html
@@ -92,11 +92,11 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-4">
-            <div class="mobile-ui">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="mobile-ui col-lg-6 col-lg-offset-2">
             <img src="images/p-img/wave-mobile.gif" alt="Mobile UX" class="text-center">
             </div>
-            <div class="mobile-txt">
+            <div class="mobile-txt col-lg-6">
             <h4>WAVECHASER.PH’s services include:</h4>
             <ul>
                 <li>1. Information about Philippines’ beaches, waterfalls, and hidden gems</li>
@@ -109,6 +109,7 @@
         </div>
     </div>
 </div>
+
 <div class="container-fluid">
     <div class="row wave-bottom-splash">
         <div class="col-sm-12 col-lg-12">
