--- a/public/biotec.html
+++ b/public/biotec.html
@@ -94,16 +94,35 @@
                 <img src="images/p-img/Biotec-merch.png" alt="Merch" class="merch">
             </div>
             <div class="proj-desc">
-                <p>For this project, my team and I were tasked to bring an awareness to this new organ transplant process and spread the ‘word’ on what it is, who can benefit from it and why this process is so unique and why it should become a part of mainstream medicine. As the UX and UI designer of the team, I designed the interface for BioTecture’s official website as well as the accompanying campaign graphics and the illustrations. The design is mainly inspired by the organ decellularization and recellularization process - which takes the scaffold aspect as part of the site’s illustrations.</p>
+                <p>For this project, my team and I were tasked to bring an awareness to a new organ transplant process and spread the ‘word’ on what it is, who can benefit from it and why this process is so unique and why it should become a part of mainstream medicine.</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
         <div class="row biotec-section2">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <img src="images/p-img/BioTec.png" alt="Mockup" class="mockup-img">
+                <div>
+                    <img src="images/p-img/bio-gif.gif" alt="Mockup" class="mockup-img">
+                </div>
+                <div class="sec2-txt">
+                    <p> As the UX and UI designer of the team, I designed the interface for BioTecture’s official website as well as the accompanying campaign graphics and the illustrations. </p>
+                </div>
+            </div>
+        </div>
+</div>
+
+<div class="container">
+        <div class="row biotec-section3">
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div>
+                    <img src="images/p-img/BusStop-MockUp3.jpg" alt="Mockup" class="mockup-img1">
+                    <img src="images/p-img/BusStop-MockUp1.jpg" alt="Mockup" class="mockup-img2">
+                </div>
+                <div class="sec3-txt">
+                    <p> The design is mainly inspired by the organ decellularization and recellularization process - which takes the scaffold aspect as part of the site’s illustrations. </p>
+                </div>
             </div>
         </div>
 </div>
