--- a/public/biotec.html
+++ b/public/biotec.html
@@ -94,7 +94,7 @@
                 <img src="images/p-img/Biotec-merch.png" alt="Merch" class="merch">
             </div>
             <div class="proj-desc">
-                <p>For this project, my team and I were tasked to bring an awareness to a new organ transplant process and spread the ‘word’ on what it is, who can benefit from it and why this process is so unique and why it should become a part of mainstream medicine.</p>
+                <p>This school project is about bringing awareness towards Dr. Harold Ott’s regeneration and experimental orthotopic transplantation of bioengineered organs at Harvard Medical. As a group of three, we were tasked to come up with ideas on how to spread the ‘word’ on what is the process, who can benefit from it, why this process is so unique and why it should become a part of mainstream medicine. This class assignment is to test our abilities to take a fully integrated system and develop a comprehensive layout and multilayered approach to its release out into the world of medicine. </p>
             </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
                     <img src="images/p-img/bio-gif.gif" alt="Mockup" class="mockup-img">
                 </div>
                 <div class="sec2-txt">
-                    <p> As the UX and UI designer of the team, I designed the interface for BioTecture’s official website as well as the accompanying campaign graphics and the illustrations. </p>
+                    <p> Using Adobe Photoshop, Illustrator, and XD, I designed BioTecture’s high-fidelity mobile and desktop wireframes in a way that users can take any information as they can while avoiding overcrowding the interface. It is modern yet clean. I focused on relaying an easy 3-step explanation of what the process is and how they can benefit from it. Due to our time, I designed a one-page scrolling website where they can learn more about the process, the lab, and the ways to contribute.  </p>
                 </div>
             </div>
         </div>
@@ -121,7 +121,14 @@
                     <img src="images/p-img/BusStop-Mockup1.jpg" alt="Mockup" class="mockup-img2">
                 </div>
                 <div class="sec3-txt">
-                    <p> The design is mainly inspired by the organ decellularization and recellularization process - which takes the scaffold aspect as part of the site’s illustrations. </p>
+                    <p> The design is mainly inspired by the organ decellularization and recellularization process - which takes the scaffold aspect as part of the site’s illustrations. 
+                    <br> We thought that putting up displays on multiple bus stops will deliver our purpose because these are public spaces. We want to educate people that ‘The BioTec Organs’ are here for them to avail. 
+                    <br>Aside from the website’s UI, I was also responsible for designing the printed ads and merchandises while also making sure that everything is cohesive. 
+                    
+                    <img src="images/p-img/heart.gif" alt="Heart Illustration" class="heart w-5">
+                    <br>
+                    <br>
+                    Taking Architecture and Biology into consideration, the illustrations that I designed mimics the organ itself and its scaffold that represents the regeneration and degeneration of the organs. I opted for simple yet bold designs. Phrases like “You don’t have to wait” and “Life above All” are to empathize with people especially during the hard times that they are going through. I also included the lab’s website on the ad so that people can do their quick research whilst waiting for the buses. These ads can also be printed as stand-alone posters that can be posted at hospitals and other facilities where applicable. </p>
                 </div>
             </div>
         </div>
